quoting-CypressTK1/force-app/main/default/objects/RateCardAttributeOption__c/RateCardAttributeOption__c.object-meta.xml
<CustomObject>
    <label>Rate Card Attribute Option</label>
    <nameField>
        <displayFormat>RCAO-{00000}</displayFormat>
        <label>Rate Card Attribute Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Attribute Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>