quoting-CypressTK1/force-app/main/default/objects/RateCardAttributeOption__c/fields/AttributeAPIName__c.field-meta.xml
<CustomField>
    <fullName>AttributeAPIName__c</fullName>
    <formula>RateCardAttributeId__r.FieldAPIName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute API Name</label>
    <type>Text</type>
</CustomField>