quoting-CypressTK1/force-app/main/default/objects/RateCardAttributeOption__c/fields/AttributeGroupId__c.field-meta.xml
<CustomField>
    <fullName>AttributeGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Group</label>
    <referenceTo>RateCardAttributeGroup__c</referenceTo>
    <relationshipLabel>Rate Card Attribute Options</relationshipLabel>
    <relationshipName>RateCardAttributeOptions</relationshipName>
    <type>Lookup</type>
</CustomField>