quoting-CypressTK1/force-app/main/default/objects/RateCardAttributeOption__c/fields/RateCardAttributeId__c.field-meta.xml
<CustomField>
    <fullName>RateCardAttributeId__c</fullName>
    <label>Rate Card Attribute</label>
    <referenceTo>RateCardAttribute__c</referenceTo>
    <relationshipLabel>Rate Card Attribute Options</relationshipLabel>
    <relationshipName>RateCardAttributeOptions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>