quoting-CypressTK1/force-app/main/default/objects/RateCardAttributeOption__c/fields/RateCardAttributeOptionKey__c.field-meta.xml
<CustomField>
    <fullName>RateCardAttributeOptionKey__c</fullName>
    <externalId>true</externalId>
    <label>Rate Card Attribute Option Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>