quoting-CypressTK1/force-app/main/default/objects/RateCardAttributeOption__c/fields/RateCardId__c.field-meta.xml
<CustomField>
    <fullName>RateCardId__c</fullName>
    <label>Rate Card</label>
    <referenceTo>RateCard__c</referenceTo>
    <relationshipLabel>Rate Card Attribute Options</relationshipLabel>
    <relationshipName>RateCardAttributeOptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>