quoting-CypressTK1/force-app/main/default/objects/RateCardAttributeOption__c/fields/TextValue__c.field-meta.xml
<CustomField>
    <fullName>TextValue__c</fullName>
    <label>Text Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>